plaindrome Number done

--- a/java/.project
+++ b/java/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>LE_1_EASY_Two_Sum</name>
+	<name>java</name>
 	<comment></comment>
 	<projects>
 	</projects>
